--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
          </div>
       </div>
       <!-- END LOADER -->
+      <!---end this here-->
       <div class="wrapper">
       <nav id="sidebar">
          <div class="menu_section">
